bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: not found: value mess
    mess = litMessage();
    ^BDR:7: error: not found: value mess
    if (mess == "R") {
        ^BDR:11: error: not found: value mess
    } else if (mess == "L") {
               ^BDR:15: error: not found: value mess
    } else if (mess == "I") {
               ^BDR:19: error: not found: value mess
    } else if (mess == "A") {
               ^BDR:22: error: not found: value mess
    } else if (mess == "B") {
               ^BDR:26: error: not found: value mess
    } else if (mess == "C") {
               ^BDR:31: error: not found: value mess
    } else if (mess == "Z") {
               ^BDR:34: error: not found: value mess
    } else if (mess == "Y") {
               ^BDR:38: error: not found: value mess
    } else if (mess == "X") {
               ^